# trident_sim

./: CMakeLists.txt  package.xml
launch/: trident_launch.py
models/: trident_drone.urdf
trident_sim/: image_publisher.py  setup.py
worlds/: trident_world.sdf
